--- a/breakout/index.html
+++ b/breakout/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>  
+<!DOCTYPE html>
 <html>
-    <head>  
+    <head>
         <meta charset="utf-8" />
         <title> Breakout Clone </title>
-        <script type="text/javascript" src="phaser.min.js"></script>
+        <script type="text/javascript" src="../phaser.min.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
 
     <body>
 
-    </body>  
-</html> 
+    </body>
+</html>
